--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,11 @@ group = project.maven_group
 
 repositories {
     maven {
-        name = "Ladysnake Libs"
-        url = "https://dl.bintray.com/ladysnake/libs"
+        name = "Ladysnake Mods"
+        url = 'https://ladysnake.jfrog.io/artifactory/mods'
+    }
+    maven {
+        url = "https://mymavenrepo.com/repo/4ORcMjxPdDAGU4bCTMnc/"
     }
 }
 
@@ -35,6 +38,8 @@ dependencies {
     // CCA jar-in-jar
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.cca_version}"
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${project.cca_version}"
+
+    modImplementation(include("us.spaceclouds:FabricTPAFixTitles:0.1.2"))
 }
 
 processResources {
