--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.47
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.5
 loader_version=0.10.6+build.214
-cca_version=2.7.10
+cca_version=2.7.13
 # Mod Properties
-mod_version=0.1.2
+mod_version=0.1.3
 maven_group=eu.codedsakura
 archives_base_name=FabricHomes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.20.1+build.401-1.16
+fabric_version=0.31.0+1.16
