--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.5
-loader_version=0.10.6+build.214
-cca_version=2.7.13
+yarn_mappings=1.16.5+build.9
+loader_version=0.11.3
+cca_version=2.8.3
 # Mod Properties
-mod_version=0.1.3
+mod_version=1.0.0
 maven_group=eu.codedsakura
 archives_base_name=FabricHomes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.31.0+1.16
+fabric_version=0.34.6+1.16
