--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17-pre3
-yarn_mappings=1.17-pre3+build.1
-loader_version=0.11.3
-cca_version=3.0.0-nightly.1.17-pre1
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
+cca_version=4.0.0
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.1.0
 maven_group=eu.codedsakura
 archives_base_name=FabricHomes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.34.8+1.17
+fabric_version=0.43.1+1.18
