--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
         name = "Ladysnake Mods"
         url = 'https://ladysnake.jfrog.io/artifactory/mods'
     }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
@@ -35,6 +36,8 @@ dependencies {
     // CCA jar-in-jar
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:${project.cca_version}"
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:${project.cca_version}"
+
+    modImplementation 'me.lucko:fabric-permissions-api:0.1-SNAPSHOT'
 }
 
 processResources {
