--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.22
-loader_version=0.13.2
-cca_version=4.1.2
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.7
+cca_version=5.0.0-beta.1
 # Mod Properties
-mod_version=2.2.1
+mod_version=2.3.0
 maven_group=eu.codedsakura
 archives_base_name=FabricHomes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.46.4+1.18
+fabric_version=0.55.3+1.19
